fix: emojis overlap in Insumos resolved

--- a/public/css/stylebutton.css
+++ b/public/css/stylebutton.css
@@ -124,6 +124,7 @@
 }
 .footer-button-ins.accept {
     background-color: #4CAF50;
+    z-index: 1;
 }
 .footer-button-ins.modify {
     font-weight: bold;
@@ -147,7 +148,7 @@
     filter: brightness(1.3);
 }
 .sys-table tr.selected-row {
-    background-color: #868686ca;
+    background-color: #fff09eca;
 }
 .alimento-entry {
     display: flex;
